added personal info (2)

--- a/2-Example-Works/204-raven-studio/index.html
+++ b/2-Example-Works/204-raven-studio/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+<body>
+  background-color : 
+</body>
+    
+    
     <!-- Site made with Mobirise Website Builder v5.1.14, https://mobirise.com -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,7 +24,7 @@
       content="New SeminarM4 Theme HTML Template - Download Now!"
     />
 
-    <title>Online Workshop</title>
+    <title>QuickTry</title>
     <link
       rel="stylesheet"
       href="https://mobirise.com/extensions/seminarm4/workshop/assets/web/assets/mobirise-icons2/mobirise2.css"
@@ -83,7 +88,7 @@
             <span class="navbar-logo">
               <a href="/">
                 <img
-                  src="images/raven-studio.png"
+                  src="images/quicktry.png"
                   alt="Raven"
                   style="height: 5rem;"
                 />
@@ -137,7 +142,7 @@
 
     <br />
     <br />
-    <img src="images/raven-cover.png" />
+    <img src="images/asd.png" />
 
     <section class="header005 cid-skD1Q2u9VP" id="header005-1">
       <div class="container">
