--- a/1-Basic-Web-Development/104-links.html
+++ b/1-Basic-Web-Development/104-links.html
@@ -4,12 +4,12 @@
     <h2>HTML Links</h2>
     <p>HTML links are defined with the a tag:</p>
 
-    <a href="https://www.codepassion.co">
-      This is a link
+    <a href="https://www.instagram.com/poomthegoat_/">
+      IG
     </a>
 
     <br />
 
-    <a href="https://github.com/savepong">My Github</a>
+    <a href="https://github.com/Poomthegoat">poomthegoat_</a>
   </body>
 </html>
